--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,11 +2,26 @@
 layout: default
 ---
 
-<div class="home">
+<div class="divided">
+    
+					<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
+						
+						<div class="content">
+							<h1>Digital Research<br/ > Start-Up Partnerships</h1>
+							<p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
+							<ul class="actions vertical">
+								<li><a href="about.html" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
+							</ul>
+							
+						</div>
+						<div class="image">
+							<img src="images/code.jpg" alt="" />
+						</div>
+					</section>
 
-  <h1>Test</h1>
+  
 
-  <h1 class="page-heading">Posts</h1>
+  <!--<h1 class="page-heading">Posts</h1>
   
   {{ content }}
 
@@ -23,6 +38,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
 
 </div>
