--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
-<header class="site-header" role="banner">
+  <header class="site-header" role="banner">
 
   <div class="wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <!-- <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> -->
+     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a> 
   
     {% if page_paths %}
       <nav class="site-nav">
-         <!-- <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+          <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
             <svg viewBox="0 0 18 15" width="18px" height="15px">
@@ -16,7 +16,7 @@
               <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
             </svg>
           </span>
-        </label>  -->
+        </label>  
 
         <div class="trigger">
           {% for path in page_paths %}
@@ -38,4 +38,4 @@
       </nav>
     {% endif %}
   </div>
-</header>
+</header> 
