--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,24 +2,25 @@
 layout: default
 ---
 
-<div class="divided">
+<div id="wrapper" class="divided">
     
-					<section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
-						
-						<div class="content">
-							<h1>Digital Research<br/ > Start-Up Partnerships</h1>
-							<p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
-							<ul class="actions vertical">
-								<li><a href="about.html" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
-							</ul>
-							
-						</div>
-						<div class="image">
-							<img src="images/code.jpg" alt="" />
-						</div>
-					</section>
+  <section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
+    <div class="content">
+      <h1>Digital Research<br/ > Start-Up Partnerships</h1>
+      <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
+      <ul class="actions vertical">
+        <li><a href="about.html" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
+      </ul>
+    </div>
 
-  
+    <div class="image">
+      <img src="images/code.jpg" alt="" />
+    </div>
+  </section>
+
+  <div id="footerbox">
+      {% include footer.html %}
+  </div>
 
   <!--<h1 class="page-heading">Posts</h1>
   
