--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,7 +3,7 @@
 
 @import "minima";
 
-@import url(font-awesome.min.css);
+@import url(/assets/font-awesome-4.7.0/css/font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 
 /* Overwrite Minima */
@@ -11,6 +11,12 @@
     .site-nav {
         float: left;
         margin-right: 15px;
+    }
+
+/* Custom */
+
+    #footerbox {
+        box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.075);
     }
 
 /*
@@ -32,7 +38,7 @@
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
-	}
+    }
 
 	body {
 		line-height: 1;
