--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,14 @@ layout: default
 ---
 
 <div id="wrapper" class="divided">
-    
   <section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
+      <div>
+        <a class="page-link" href="/">Home</a>
+        {% for page in site.pages %}
+          <a class="page-link" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
+        {% endfor %}
+      </div>
       <h1>Digital Research<br/ > Start-Up Partnerships</h1>
       <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
       <ul class="actions vertical">
