--- a/assets/main.scss
+++ b/assets/main.scss
@@ -15,9 +15,13 @@
 
 /* Custom */
 
+	#headerbox {
+		margin-bottom: 2rem;
+	}
+
     #footerbox {
         box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.075);
-    }
+	}
 
 /*
 	Story by HTML5 UP
