--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,21 +1,19 @@
 ---
 layout: default
 ---
-{% include base.html %}
-
 <div id="wrapper" class="divided">
   <section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
       <div id="headerbox">
         <a class="page-link" href="{{ relative_url }}">Home</a> |
-        <a class="page-link" href="{{ base }}/about">About</a> |
-        <a class="page-link" href="{{ base }}/projects">Projects</a> |
-        <a class="page-link" href="{{ base }}/posts">Posts</a>
+        <a class="page-link" href="{{ site.baseurl }}/about">About</a> |
+        <a class="page-link" href="{{ site.baseurl }}/projects">Projects</a> |
+        <a class="page-link" href="{{ site.baseurl }}/posts">Posts</a>
       </div>
       <h1>Digital Research<br/ > Start-Up Partnerships</h1>
       <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
       <ul class="actions vertical">
-        <li><a href="{{ base }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
+        <li><a href="{{ site.baseurl }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
       </ul>
     </div>
 
