--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,7 @@ layout: default
 <div id="wrapper" class="divided">
   <section class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
     <div class="content">
-      <div id="headerbox">
-        <a class="page-link" href="{{ relative_url }}">Home</a> |
-        <a class="page-link" href="{{ site.baseurl }}/about">About</a> |
-        <a class="page-link" href="{{ site.baseurl }}/projects">Projects</a> |
-        <a class="page-link" href="{{ site.baseurl }}/posts">Posts</a>
-      </div>
+      {% include navbar.html %}
       <h1>Digital Research<br/ > Start-Up Partnerships</h1>
       <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
       <ul class="actions vertical">
@@ -22,8 +17,6 @@ layout: default
     </div>
   </section>
 
-  <div id="footerbox">
-      {% include footer.html %}
-  </div>
+  {% include footer.html %}
 
 </div>
