--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7065,37 +7065,37 @@
 			width: 32rem;
 		}
 
-	@media screen and (max-width: 1680px) {
+	// @media screen and (max-width: 1680px) {
 
-		.wrapper.style1 > .inner {
-			padding: 5rem 2.5rem 3rem 2.5rem ;
-		}
+	// 	.wrapper.style1 > .inner {
+	// 		padding: 5rem 2.5rem 3rem 2.5rem ;
+	// 	}
 
-	}
+	// }
 
-	@media screen and (max-width: 1280px) {
+	// @media screen and (max-width: 1280px) {
 
-		.wrapper.style1 > .inner {
-			padding: 4rem 4rem 2rem 4rem ;
-		}
+	// 	.wrapper.style1 > .inner {
+	// 		padding: 4rem 4rem 2rem 4rem ;
+	// 	}
 
-	}
+	// }
 
-	@media screen and (max-width: 980px) {
+	// @media screen and (max-width: 980px) {
 
-		.wrapper.style1 > .inner {
-			padding: 4.5rem 3rem 2.5rem 3rem ;
-		}
+	// 	.wrapper.style1 > .inner {
+	// 		padding: 4.5rem 3rem 2.5rem 3rem ;
+	// 	}
 
-	}
+	// }
 
-	@media screen and (max-width: 736px) {
+	// @media screen and (max-width: 736px) {
 
-		.wrapper.style1 > .inner {
-			padding: 3rem 2rem 1rem 2rem ;
-		}
+	// 	.wrapper.style1 > .inner {
+	// 		padding: 3rem 2rem 1rem 2rem ;
+	// 	}
 
-	}
+	// }
 
 /* Wrapper (style2) */
 
