--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,7 +2,22 @@
 layout: default
 ---
 <div id="wrapper" class="divided">
-    <section class="wrapper style1 align-center">
-        
+    <section class="spotlight style2 orient-left content-orient-left">
+        <div class="content">
+            {% include navbar.html %}
+            <h2>Projects</h2>
+        </div>
     </section>
+
+    <section class="spotlight style2 orient-left content-orient-left">
+        <div class="content">
+            {% for post in site.categories.projects %}
+                <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+                <h4>{{ post.author }}</h4>
+                {{ post.excerpt }}
+            {% endfor %}
+        </div>
+    </section>
+
+    {% include footer.html %}
 </div>
