--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div id="headerbox">
-    <a class="page-link" href="{{ site.baseurl }}">Home</a> |
+    <a class="page-link" href="{{ site.baseurl }}/">Home</a> |
     <a class="page-link" href="{{ site.baseurl }}/about">About</a> |
     <a class="page-link" href="{{ site.baseurl }}/projects">Projects</a> |
     <a class="page-link" href="{{ site.baseurl }}/posts">Posts</a>
