add call for participation page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
       <h1>Digital Research<br/ > Start-Up Partnerships</h1>
       <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
       <ul class="actions vertical">
-        <li><a href="{{ site.baseurl }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="cfp.html" class="button big wide smooth-scroll-middle">Participate!</a></li>
+        <li><a href="{{ site.baseurl }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ site.baseurl }}/apply" class="button big wide smooth-scroll-middle">Participate!</a></li>
       </ul>
     </div>
 
