--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,5 +2,6 @@
     <a class="page-link" href="{{ site.baseurl }}/">Home</a> |
     <a class="page-link" href="{{ site.baseurl }}/about">About</a> |
     <a class="page-link" href="{{ site.baseurl }}/projects">Projects</a> |
-    <a class="page-link" href="{{ site.baseurl }}/posts">Posts</a>
+    <a class="page-link" href="{{ site.baseurl }}/posts">Posts</a> |
+    <a class="page-link" href="{{ site.baseurl }}/apply">Apply</a>
 </div>
