add styling to text on participation page

--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -11,7 +11,7 @@ layout: default
 
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
-            <p>Digital Research Start-Up Partnerships for Graduate Students, Summer 2017, UCLA Library</p>
+            <p style="font-style: italic;">Digital Research Start-Up Partnerships for Graduate Students, Summer 2017, UCLA Library</p>
             <p>Submission deadline: Applications received by May 26 will be notified by June 1. Applications will 
                 be accepted through June 15 on a rolling basis if space is available. Please submit your 
                 application below. Applications should be submitted as one file with 3 sections, including a 
