remove homepage buttons, add cfp, remove projects

--- a/_layouts/apply.html
+++ b/_layouts/apply.html
@@ -31,6 +31,7 @@ layout: default
                 <li>Schedule/timeline for your project</li>
                 <li>Project budget with funding needs and other sources of support if available</li>
             </ul>
+            <p style="color: red;">The deadline for applications has passed. Please apply next year!</p>
         </div>
     </section>
 
