--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,9 +6,15 @@ layout: default
     <div class="content">
       {% include navbar.html %}
       <h1>Digital Research<br/ > Start-Up Partnerships</h1>
-      <p class="major"><!--[-->UCLA Library's digital projects incubator for graduate students and librarians.<!--]--><br />July 13-September 1, 2017</p>
-      <ul class="actions vertical">
+      <p class="major">UCLA Library's digital projects incubator for graduate students and librarians.</p>
+      <!-- <ul class="actions vertical">
         <li><a href="{{ site.baseurl }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ site.baseurl }}/apply" class="button big wide smooth-scroll-middle">Participate!</a></li>
+      </ul> -->
+      <h3>Most Recent Posts</h3>
+      <ul>
+        {% for post in site.posts limit:3 %}
+        <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
+        {% endfor %}
       </ul>
     </div>
 
