add participants page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
       <!-- <ul class="actions vertical">
         <li><a href="{{ site.baseurl }}/about" class="button big wide smooth-scroll-middle">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ site.baseurl }}/apply" class="button big wide smooth-scroll-middle">Participate!</a></li>
       </ul> -->
-      <h3>Most Recent Posts</h3>
+      <h3>Latest Posts</h3>
       <ul>
         {% for post in site.posts limit:3 %}
         <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
