--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,6 @@
   <script src="{{ site.baseurl }}/assets/js/jquery.scrolly.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/skel.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/util.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
   <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 </head>
