--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 
 @import url(/assets/css/font-awesome.min.css);
+@import url(/assets/css/bootstrap.min.css);
 @import url(/assets/css/html5up.css);
 
 /* Overwrite Minima */
