--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,13 @@ layout: default
         <div class="content">
             {% include navbar.html %}
             <h2>{{ page.title }}</h2>
+            <h3>{{ page.author }}</h3>
         </div>
     </section>
 
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
-
+            <p>{{ page.content }}</p>
         </div>
     </section>
 
