permalink path for people fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 <li><a href="https://github.com/dressupucla" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
                 <li><a href="mailto:zoe@library.ucla.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
             </ul>
-            <p>&copy; DResSUP | UCLA Library. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p>&copy; DResSUP | UCLA Library</p>
         </div>
     </footer>
 </div>
