--- a/assets/imports.scss
+++ b/assets/imports.scss
@@ -3,6 +3,6 @@
 
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 
-@import url(/assets/css/font-awesome.min.css);
-@import url(/assets/css/bootstrap.min.css);
-@import url(/assets/css/html5up.css);
+@import url({{ site.baseurl }}/assets/css/font-awesome.min.css);
+@import url({{ site.baseurl }}/assets/css/bootstrap.min.css);
+@import url({{ site.baseurl }}/assets/css/html5up.css);
