add terry allen

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -12,7 +12,7 @@ layout: default
 
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
-
+            {{ content }}
         </div>
     </section>
 
