--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,11 @@ layout: default
         <div class="content">
             {% include navbar.html %}
             <h2>{{ page.title }}</h2>
-            <h3>{{ page.author }}</h3>
+            {% for person in site.people %}
+            {% if page.author == person.title %}
+            <a href="{{ person.url }}" style="text-decoration: none;"><h3>{{ page.author }}</h3></a>
+            {% endif %}
+            {% endfor %}
         </div>
     </section>
 
