--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -6,7 +6,8 @@ layout: default
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
             {% include navbar.html %}
-            <h2>{{ page.title }}</h2>
+            <h2>{{ page.display_name }}</h2>
+            <h3>{{ page.title }}</h3>
         </div>
     </section>
 
