--- a/_layouts/instructors.html
+++ b/_layouts/instructors.html
@@ -23,7 +23,7 @@ layout: default
                         <img src="{{ site.baseurl }}/images/colors.jpg">
                         {% endif %}
                     </div>
-                    <h3 style="text-align: center; padding-top: 15px;"><a href="{{ person.url }}">{{ person.title }}</a></h3>
+                    <h3 style="text-align: center; padding-top: 15px;"><a href="{{ person.url }}">{{ person.display_name }}</a></h3>
                     <ul class="icons" style="text-align: center;">
                         {% if person.twitter %}
                         <li><a href="https://twitter.com/{{ person.twitter }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -39,15 +39,15 @@ layout: default
 
                 <div class="col-8">
                     {% for post in site.posts limit:1 %}
-                    {% if post.author == person.title %}
+                    {% if post.author == person.display_name %}
                     <h3>Latest Posts</h3>
                     {% else %}
-                    <h4>Stay tuned for posts by {{ person.title }}!</h4>
+                    <h4>Stay tuned for posts by {{ person.display_name }}!</h4>
                     {% endif %}
                     {% endfor %}
                     <ul>
                         {% for post in site.posts limit:3 %}
-                        {% if post.author == person.title %}
+                        {% if post.author == person.display_name %}
                         <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
                         {% endif %}
                         {% endfor %}
