add buttons for separating participants

--- a/_layouts/participants.html
+++ b/_layouts/participants.html
@@ -2,11 +2,15 @@
 layout: default
 ---
 
+{% assign time = 1 %}
+
 <div id="wrapper" class="divided">
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
             {% include navbar.html %}
             <h2>Participants</h2>
+            <button>Summer 2017</button>
+            <button>Spring 2017</button>
         </div>
     </section>
 
