--- a/assets/main.scss
+++ b/assets/main.scss
@@ -36,6 +36,12 @@
 		ul li {
 			padding-left: 0;
 		}
+	
+	#navlist li{
+		display: inline;
+		list-style-type: none;
+		padding-right: 20px;
+	}
 
 /* Blurb */
 
