_config.yml merge conflict

--- a/_layouts/participants.html
+++ b/_layouts/participants.html
@@ -2,15 +2,13 @@
 layout: default
 ---
 
-{% assign time = 1 %}
-
 <div id="wrapper" class="divided">
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
             {% include navbar.html %}
             <h2>Participants</h2>
-            <button>Summer 2017</button>
-            <button>Spring 2017</button>
+            <a class="page-link" href="{{ site.baseurl }}/apply">Summer 2017</a> |
+            <a class="page-link" href="{{ site.baseurl }}/apply">Spring 2017</a>
         </div>
     </section>
 
