--- a/_layouts/participants.html
+++ b/_layouts/participants.html
@@ -2,18 +2,25 @@
 layout: default
 ---
 
+{% if page.session %}
+    {% assign class = page.session %}
+{% else %}
+    {% assign class = "summer-17" %}
+{% endif %}
+
 <div id="wrapper" class="divided">
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
             {% include navbar.html %}
             <h2>Participants</h2>
-            <a class="page-link" href="{{ site.baseurl }}/apply">Summer 2017</a> |
-            <a class="page-link" href="{{ site.baseurl }}/apply">Spring 2017</a>
+            {% for class in site.sessions %}
+            <a href="{{ class.url }}" class="button">{{ class.session }}</a>
+            {% endfor %}
         </div>
     </section>
 
     {% for person in site.people %}
-    {% if person.role == "participant" %}
+    {% if person.role == "participant" and person.session == class %}
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content ">
             <div class="row">
