--- a/_layouts/participants.html
+++ b/_layouts/participants.html
@@ -47,20 +47,14 @@ layout: default
                 </div>
 
                 <div class="col-8">
-                    {% for post in site.posts limit:1 %}
-                    {% if post.author == person.display_name %}
-                    <h3>Latest Posts</h3>
-                    {% else %}
-                    <h4>Stay tuned for posts by {{ person.display_name }}!</h4>
-                    {% endif %}
-                    {% endfor %}
-                    <ul>
-                        {% for post in site.posts limit:3 %}
-                        {% if post.author == person.display_name %}
-                        <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
-                        {% endif %}
-                        {% endfor %}
-                    </ul>
+                        <h3>Latest Posts</h3>
+                        <ul>
+                            {% for post in site.posts %}
+                                {% if post.author == person.display_name %}
+                                <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
+                                {% endif %}
+                            {% endfor %}
+                        </ul>
 
                     <!-- {% if person.blurb %}
                     <p class="blurb">{{ person.blurb }}</p>
