--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -14,6 +14,14 @@ layout: default
     <section class="spotlight style2 orient-left content-orient-left">
         <div class="content">
             {{ content }}
+            <h3>Latest Posts</h3>
+            <ul>
+                {% for post in site.posts %}
+                    {% if post.author == page.display_name %}
+                    <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
         </div>
     </section>
 
