--- a/_layouts/participants.html
+++ b/_layouts/participants.html
@@ -32,7 +32,6 @@ layout: default
                         <img src="{{ site.baseurl }}/images/colors.jpg">
                         {% endif %}
                     </div>
-                    <h3 style="text-align: center; padding-top: 15px;"><a href="{{ person.url }}">{{ person.display_name }}</a></h3>
                     <ul class="icons" style="text-align: center;">
                         {% if person.twitter %}
                         <li><a href="https://twitter.com/{{ person.twitter }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -47,18 +46,15 @@ layout: default
                 </div>
 
                 <div class="col-8">
-                        <h3>Latest Posts</h3>
-                        <ul>
-                            {% for post in site.posts %}
-                                {% if post.author == person.display_name %}
-                                <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-
-                    <!-- {% if person.blurb %}
-                    <p class="blurb">{{ person.blurb }}</p>
-                    {% endif %} -->
+                    <h3><a href="{{ person.url }}">{{ person.display_name }}<h4>{{ person.title }}</h4></a></h3>
+                    <p>{{ person.description }}</p>
+                    <ul>
+                        {% for post in site.posts %}
+                            {% if post.author == person.display_name %}
+                            <li><h4><a href="{{ post.url }}">{{ post.title }}</a></h4></li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
